--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   "bugs": "https://github.com/misskey-dev/node-http-message-signatures/issues",
   "main": "built/index.js",
   "types": "built/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./built/index.js",
+			"types": "./built/index.d.ts"
+		},
+		"./*": {
+			"import": "./built/*.js",
+			"types": "./built/*.d.ts"
+		}
+	},
   "scripts": {
     "eslint": "eslint --quiet \"src/**/*.ts\"",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --silent=false --verbose false",
