--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@misskey-dev/node-http-message-signatures",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha.0",
   "description": "",
   "type": "module",
   "keywords": [],
