--- a/package.json
+++ b/package.json
@@ -18,25 +18,21 @@
   "license": "MIT",
   "repository": "https://github.com/misskey-dev/node-http-message-signatures.git",
   "bugs": "https://github.com/misskey-dev/node-http-message-signatures/issues",
-  "main": "built/index.js",
-  "types": "built/index.d.ts",
-	"exports": {
-		".": {
-			"import": "./built/index.js",
-			"types": "./built/index.d.ts"
-		},
-		"./*": {
-			"import": "./built/*.js",
-			"types": "./built/*.d.ts"
-		}
-	},
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
     "eslint": "eslint --quiet \"src/**/*.ts\"",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --silent=false --verbose false",
-    "build": "tsc"
+    "build": "unbuild"
   },
   "files": [
-    "built",
+    "dist",
     "LICENSE"
   ],
   "devDependencies": {
@@ -50,6 +46,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "unbuild": "^2.0.0"
   }
 }
