--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.0-alpha.1",
   "description": "",
   "type": "module",
-  "keywords": [],
+  "keywords": [
+		"rfc9421",
+		"http",
+		"signature",
+		"signing",
+		"activitypub"
+	],
   "author": "mei23 <m@m544.net>",
   "contributors": [
     {
