--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
 		"noUnusedParameters": false,
 		"noUnusedLocals": false,
 		"noFallthroughCasesInSwitch": true,
-		"declaration": false,
-		"sourceMap": false,
+		"declaration": true,
+		"sourceMap": true,
 		"target": "ES2022",
 		"module": "nodenext",
 		"moduleResolution": "nodenext",
@@ -23,8 +23,8 @@
 		"emitDecoratorMetadata": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"rootDir": ".",
-		"baseUrl": "./",
+		"rootDir": "./src",
+		"baseUrl": ".",
 		"paths": {
 			"@/*": [
 				"./src/*"
