build cjs, mjs??

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "type": "module",
   "keywords": [
-		"rfc9421",
-		"http",
-		"signature",
-		"signing",
-		"activitypub"
-	],
+    "rfc9421",
+    "http",
+    "signature",
+    "signing",
+    "activitypub"
+  ],
   "author": "mei23 <m@m544.net>",
   "contributors": [
     {
@@ -24,26 +24,20 @@
   "license": "MIT",
   "repository": "https://github.com/misskey-dev/node-http-message-signatures.git",
   "bugs": "https://github.com/misskey-dev/node-http-message-signatures/issues",
-  "main": "built/index.js",
-  "types": "built/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./built/index.js",
-      "types": "./built/index.d.ts"
-    },
-    "./*": {
-      "import": "./built/*.js",
-      "types": "./built/*.d.ts"
-    }
-  },
+  "main": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+	"exports": {
+		"import": "./dist/index.mjs",
+		"require": "./dist/index.cjs"
+	},
   "scripts": {
     "eslint": "eslint --quiet \"src/**/*.ts\"",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --silent=false --verbose false",
-    "build": "tsc"
+    "build": "NODE_ENV=production node build.js && tsc --project tsconfig.build.json"
   },
   "packageManager": "pnpm@8.15.4",
   "files": [
-    "built",
+    "dist",
     "LICENSE"
   ],
   "devDependencies": {
@@ -56,6 +50,7 @@
     "@types/node": "^20.11.20",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
