--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		"experimentalDecorators": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
+		"esModuleInterop": true,
 		"rootDir": "./src",
 		"baseUrl": ".",
 		"paths": {
