run perf test in test ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,6 @@ jobs:
       - name: Test
         run: |
           pnpm test
+      - name: Performance
+        run: |
+          pnpm performance
