--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "typescript": "^5.3.3"
   }
 }
