--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
+    "fastify": "^4.26.2",
+    "fastify-raw-body": "^4.3.0",
     "jest": "^29.7.0",
     "jest-mock": "^29.7.0",
     "typescript": "^5.3.3"
