--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "bytes": "^3.1.2",
+    "chalk": "^5.3.0",
     "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
